log
Thu 11 May 2023 04:16:09 PM UTC: 
 tests:  0|4
total_score: 0/70
57233e7
Thu 11 May 2023 04:36:38 PM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:43: error: ‘capac’ undeclared (first use in this function)
   22 |   dato->heapArray=malloc(sizeof(heapElem)*capac);
      |                                           ^~~~~
heap.c:22:43: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
972b21a
Thu 11 May 2023 04:36:52 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘heap_top’:
heap.c:22:47: error: ‘*dato.capac’ is used uninitialized [-Werror=uninitialized]
   22 |   dato->heapArray=malloc(sizeof(heapElem)*dato->capac);
      |                                           ~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1484129
Thu 11 May 2023 04:37:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
1b34af1
Thu 11 May 2023 04:38:21 PM UTC: 
 heap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  1|3
total_score: 10/70
3c13afa
